explorer/static/explorer/explorer.css
.collapse.in {
    display: table-row;
}

.collapsing {
    position: relative;
    height: 0;
    overflow: hidden;
    -webkit-transition: height 0.01s ease;
    transition: height 0.01s ease;
}

.query-list {
    table-layout: fixed;
}

.rows-input {
    text-align: center;
    width: 40px;
}

.overflow-wrapper {
    overflow: auto; height: 500px;
}

.list-search {
    margin-top: 20px;
}

.data-headers {
    background: white;
}

.log-sql {
    word-wrap: break-word;
}

.list {
    -webkit-padding-start: 0px;
    list-style: none;
}

.wrap {
    overflow: hidden; /* for schema navigator */
}

.toggle {
    text-decoration: underline;
    cursor: pointer;
    color: #428bca;
}

.indented {
    padding-left: 30px;
}

.stats-wrapper {
    width: 120px;
    display: none;
}

.stat-wrapper {
    float: left;
    width: 120px;
}

.stat-label {
    width: 50%;
    font-weight: 300;
}

.stat-value {
    width: 50%;
    font-weight: 500;
}

.stats-expand {
    cursor: pointer;
    padding-left: 5px;
}

.data-row {
    white-space: pre;
}

.CodeMirror {
    height: 400px;
}

.table>thead>tr>th.preview-header {
    vertical-align: top;
}

span.sort {
    background: url('//cdn.datatables.net/1.10.0/images/sort_both.png') no-repeat;
    cursor: pointer;
    padding-left: 20px;
}

.pivot-table {
    padding: 15px;
}

.pvtAxisContainer, .pvtVals {
    border-color: #ddd;
}

